--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "riscv-llvm"]
-	path = riscv-llvm
-	url = https://github.com/yonghaekim/riscv-llvm.git
+[submodule "llvm-project"]
+	path = llvm-project
+	url = https://github.com/yonghaekim/llvm-project
