--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "llvm-project"]
 	path = llvm-project
 	url = https://github.com/yonghaekim/llvm-project
+[submodule "riscv-gnu-toolchain"]
+	path = riscv-gnu-toolchain
+	url = https://github.com/yonghaekim/riscv-gnu-toolchain.git
